# computational-solid-state-physics

./: .gitignore  README.md  pyproject.toml  requirements.txt
animations/: 01_phonon_animation.py  02_ising_animation.py
apps/: streamlit_app.py
data/: README.md  synthetic_debye_heat_capacity.csv
examples/: 01_crystal_and_xrd.py  02_phonon_dispersion.py  03_tight_binding_bands.py  04_heat_capacity.py  05_ising_model.py  06_brillouin_zones.py  07_compare_heat_capacity_data.py  _paths.py
notebooks/: 01_lattices_and_reciprocal_space.ipynb  02_phonons.ipynb  03_tight_binding.ipynb  04_semiconductors.ipynb  05_heat_capacity.ipynb  06_ising_model.ipynb  07_brillouin_zones.ipynb
src/solidstate/: __init__.py  bands.py  brillouin.py  heat_capacity.py  lattices.py  magnetism.py  phonons.py  reciprocal.py  semiconductors.py
tests/: test_solidstate.py
tools/: make_notebooks.py
