[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "computational-solid-state-physics"
version = "0.1.0"
description = "Educational Python simulations for core solid state physics topics."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Chalaka" }]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
app = ["streamlit>=1.28"]
animations = ["pillow>=9.0"]
dev = ["pytest>=7.0", "streamlit>=1.28", "pillow>=9.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
